--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,4 +1,5 @@
-<h1>Help Page</h1>
+<% provide(:title, "Help") %>
+<h1>Sample App Home Page</h1>
 <p>
-    Get help on the Ruby on Rails Tutorial at the <a href="https://www.railstutorial.org/help">Rails Tutorial help page</a>. To get help on this sample app, see the <a href="https://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em> book</a>.
+    This is the home page for the <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> sample application.
 </p>
